# EbookNook

./: .gitignore  .gitmodules  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  vitest.workspace.ts
web/: .gitignore  index.html  package.json  postcss.config.mjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  declarations.d.ts  main.tsx
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/annotations/: Cargo.toml
web/src-tauri/annotations/src/: annotations_service.rs  lib.rs  service.rs
web/src-tauri/api/: Cargo.toml
web/src-tauri/api/src/: annotations.rs  bookmarks.rs  books.rs  commands.rs  epub.rs  lib.rs  library.rs  notes.rs
web/src-tauri/bookmarks/: Cargo.toml
web/src-tauri/bookmarks/src/: bookmarks_service.rs  lib.rs  service.rs
web/src-tauri/bookmarks/tests/: add_bookmark_test.rs  delete_bookmark_test.rs  load_state_test.rs  new_bookmark_state_test.rs
web/src-tauri/books/: Cargo.toml
web/src-tauri/books/src/: books_commands.rs  books_service.rs  lib.rs  service.rs  types.rs
web/src-tauri/capabilities/: default.json
web/src-tauri/database/: .gitignore  Cargo.toml
web/src-tauri/database/src/: db_service.rs  lib.rs  service.rs  structs.rs
web/src-tauri/database/src/migrations/: annotations.rs  bookmarks.rs  books.rs  chapters.rs  epub.rs  highlights.rs  metadata.rs  mobi.rs  mod.rs  notes.rs  pdf.rs  progress.rs  sections.rs  toc.rs
web/src-tauri/database/src/migrations/epub/: epub_table.rs  mod.rs
web/src-tauri/formats/: Cargo.toml
web/src-tauri/formats/src/: formats_service.rs  lib.rs  service.rs
web/src-tauri/formats/src/epub/: epub_service.rs  mod.rs  service.rs
web/src-tauri/formats/src/mobi/: mobi_service.rs  mod.rs  service.rs
web/src-tauri/formats/src/pdf/: mod.rs  pdf_service.rs  service.rs
web/src-tauri/notes/: Cargo.toml
web/src-tauri/notes/src/: lib.rs  notes_service.rs  service.rs
web/src-tauri/notes/tests/: add_notes_test.rs  delete_note_test.rs  get_note_by_id_test.rs  load_notes_state_test.rs  note_new_state_test.rs
web/src-tauri/search/src/: lib.rs  search_service.rs  service.rs
web/src-tauri/src/: main.rs
web/src-tauri/state/: Cargo.toml
web/src-tauri/state/src/: structs.rs
web/src-tauri/types/: Cargo.toml
web/src-tauri/types/bindings/: annotations.ts  book.ts  bookmarks.ts  epub.ts  format.ts  highlights.ts  metadata.ts  mobi.ts  notes.ts  pdf.ts  progress.ts  sections.ts  toc.ts
web/src-tauri/types/src/: annotations.rs  book.rs  bookmarks.rs  epub.rs  format.rs  highlights.rs  lib.rs  metadata.rs  mobi.rs  notes.rs  pdf.rs  progress.rs  sections.rs  toc.rs
web/src-tauri/utils/src/: lib.rs
web/src/containers/: Home.tsx  Reader.tsx
web/src/interfaces/: index.ts
web/src/language/: index.tsx
(+130 files in other folders)
