[package]
name = "ebooknook"
version = "0.1.0"
description = "A Tauri App"
authors = [
  "Luckmer",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ebooknook_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib",
]

[build-dependencies]
tauri-build = { version = "2", features = [
] }

[dependencies]
database = { path = "./database" }
books = { path = "./books" }


tauri-plugin-opener = "2"
serde = { version = "1", features = [
  "derive",
] }
serde_json = "1"

tauri = { version = "2", features = [
] }
sqlx = { version = "0.8.6", features = [
    "chrono",
    "sqlite",
    "runtime-tokio-rustls",
] }


[workspace.dependencies]
sqlx = { version = "0.8.6", features = [
    "chrono",
    "sqlite",
    "runtime-tokio-rustls",
] }

tauri = { version = "2", features = [
] }
serde = { version = "1", features = [
  "derive",
] }

[workspace]
members = [
  "database",
  "books",
]
