[package]
name = "ebooknook"
version = "0.1.0"
description = "A Tauri App"
authors = [
  "Luckmer",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ebooknook_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib",
]

[build-dependencies]
tauri-build = { version = "2", features = [
] }

[dependencies]
database = { path = "./database" }
formats = { path = "./formats" }
search = { path = "./search" }
utils = { path = "./utils" }
api = { path = "./api" }
types = { path = "./types" }
state = { path = "./state" }

tauri-plugin-opener = "2"
serde = { version = "1", features = [
  "derive",
] }
serde_json = "1"

tauri = { version = "2", features = [
] }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "sqlite",
  "runtime-tokio-rustls",
] }
ts-rs = "11.1.0"
tauri-plugin-fs = "2"


[workspace.dependencies]
ts-rs = "11.1.0"
serde = { version = "1", features = [
  "derive",
] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "sqlite",
  "runtime-tokio-rustls",
] }

tauri = { version = "2", features = [
] }

[workspace]
members = [
  "database",
  "formats",
  "search",
  "api",
  "utils",
  "types",
  "state",
]
